src/main/java/com/example/githubapicalls/errors/WrongHeaderException.java
package com.example.githubapicalls.errors;

public class WrongHeaderException extends RuntimeException {
}
